# mytikas

./: CMakeLists.txt  PANTHEON.txt  README.md  RULES.md  build-wasm-api.sh
.github/workflows/: c-cpp.yml  js.yml  native.yml  web.yml
apps/: CMakeLists.txt  evaluate.cc  play.cc  precalculate.cc  wasm-api.cc
include/: cli.h  moves.h  players.h  random.h  state.h
src/: CMakeLists.txt  cli.cc  cli_player.cc  mcts_player.cc  minimax_player.cc  moves.cc  players.cc  random.cc  random_player.cc  state.cc
tests/: CMakeLists.txt  moves_test.cc
www/: .gitignore  README.txt  index.html  mytikas.css  mytikas.js  package-lock.json  package.json  wasm-api-wrapper.js
www/public/: .gitignore
www/src/: App.css  App.tsx  AugmentedState.ts  BoardComponent.css  BoardComponent.tsx  ErrorBoundary.tsx  GameComponent.css  GameComponent.tsx  HistoryComponent.css  HistoryComponent.tsx  index.css  utils.ts  wasm-api.ts
www/src/assets/: .gitignore
www/src/game/: board.ts  encoding.ts  gods.ts  player.ts  state.ts  turn.ts
