cmake_minimum_required(VERSION 4.0)
project(mytikas VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)

add_compile_options(-Wall)

if ( CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR
     CMAKE_CXX_COMPILER_ID STREQUAL "GNU" )
    add_compile_options(-Wextra -Wno-sign-compare)
endif()

add_subdirectory(src)
add_subdirectory(apps)
